--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
-spring.datasource.url=root
+spring.datasource.username=root
 spring.datasource.password=root
